fix: Fix Topbar Width to be aligned with Site content - MEED-730 (#101)
Prior tot this change, the topbar wasn't aligned with Site content. This
change will make the Topbar uses the same width and style as Site
Content.

--- a/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
+++ b/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
@@ -24,9 +24,9 @@ html {
   height: auto;
 }
 
-.mainPageLayout {
+.mainPageLayout, .headerLayout {
+  width: 72rem;
   max-width: 72rem;
-  margin: 0 auto;
 }
 
 .copyToClipboardInput {
